@@ -34,6 +34,10 @@ Valerio Pilo
   Jackdmp changes log
 ---------------------------
 
+2011-04-20 Stephane Letz  <letz@grame.fr>
+
+	* Add XRun detection in PortAudio driver.
+
 2011-04-18 Stephane Letz  <letz@grame.fr>
 
 	* JackWeakAPI.cpp renamed in JackWeakAPI.c.
